RESOLVED FIXED41570
[Qt] Fix DumpRenderTree userStyleSheet handling
https://bugs.webkit.org/show_bug.cgi?id=41570
Summary [Qt] Fix DumpRenderTree userStyleSheet handling
Patrick R. Gansterer
Reported 2010-07-03 12:33:52 PDT
see patch
Attachments
Patch (2.47 KB, patch)
2010-07-03 12:35 PDT, Patrick R. Gansterer
no flags
Patrick R. Gansterer
Comment 1 2010-07-03 12:35:22 PDT
Simon Hausmann
Comment 2 2010-07-03 15:32:40 PDT
Patch looks okay to me, but how did you run into this? I don't see any existing layout test calling setUserStyleSheetLocation after enabling the feature? :) Or are you about to add a layout test that relies on this working?
Simon Hausmann
Comment 3 2010-07-03 15:33:44 PDT
Ok, I see platform/mac/fast/loader/user-stylesheet-fast-path.html using this feature.
WebKit Commit Bot
Comment 4 2010-07-03 16:00:27 PDT
Comment on attachment 60455 [details] Patch Clearing flags on attachment: 60455 Committed r62454: <http://trac.webkit.org/changeset/62454>
WebKit Commit Bot
Comment 5 2010-07-03 16:00:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.