2010-07-03  Patrick Gansterer  <paroga@paroga.com>

Reviewed by Simon Hausmann.

        [Qt] Fix DumpRenderTree userStyleSheet handling.
        https://bugs.webkit.org/show_bug.cgi?id=41570

        DumpRenderTree did only set the userStyleSheet at
        layoutTestController.setUserStyleSheetEnabled().

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::reset):
        (LayoutTestController::setUserStyleSheetLocation):
        (LayoutTestController::setUserStyleSheetEnabled):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

Canonical link: https://commits.webkit.org/53369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62454 268f45cc-cd09-0410-ab3c-d52691b4dbfc